# facility-external-spack-configs

./: CMakeLists.txt
crusher/: packages.yaml
frontier/: env_vars.yaml  environment.yaml  packages.yaml
frontier/cray-python/3.11.7/: packages.yaml
frontier/rocm-5.3.0/: packages.yaml
frontier/rocm-5.4.3/: packages.yaml
frontier/rocm-6.0.0/: packages.yaml
frontier/rocm-6.2.0/: packages.yaml
frontier/rocm-6.2.4/: packages.yaml
perlmutter/: packages.yaml
